Fix: Music spacing

--- a/css/music-playlist.css
+++ b/css/music-playlist.css
@@ -11,6 +11,7 @@ h1 {
 }
 
 .song {
+    margin-bottom: 5px;
     display: flex;
     align-items: center;
     font-size: 1.3rem;
